# Produce101_linux

./: README.md
Voting System - Produce 101/: CMakeLists.txt  graph.sh  p3.sh
Voting System - Produce 101/inc/: Viewer_v.h  auto.h  common.h  manager.h  singer.h  viewer.h
Voting System - Produce 101/lib/: CMakeLists.txt  Viewer_v.cpp  auto.cpp  common.cpp  manager.cpp  singer.cpp  viewer.cpp
Voting System - Produce 101/src/: CMakeLists.txt  client.cpp  server.cpp
